--- a/src/App.css
+++ b/src/App.css
@@ -46,3 +46,10 @@ body{
     left: 50%;
     transform: translateX(-50%);
 }
+.orders p.active,.nav-menu-list button.active{
+    color: #00D880;
+}
+.nav-menu-list button:hover{
+    background-color: transparent;
+    color: #00D880;
+}
