--- a/src/App.css
+++ b/src/App.css
@@ -71,3 +71,47 @@ body{
     flex-direction: row-reverse;
     align-items: center;
 }
+.rbc-btn-group:first-child button:nth-child(2)::after{
+    width: 30px;
+    height: 30px;
+    content: "<";
+    position: absolute;
+    font-size: 30px;
+    top:-3px
+}
+.rbc-btn-group button{
+    border: none !important;
+    
+}
+.rbc-btn-group button:first-child{
+    position: relative;
+    left: -20px;
+    top: 0px;
+    
+}
+.rbc-toolbar button:hover {
+    color: #373a3c;
+    background-color: transparent !important;
+    border-color: transparent !important;
+}
+.rbc-toolbar button:active, .rbc-toolbar button.rbc-active{
+    box-shadow: none !important;
+}
+.rbc-toolbar button:focus{
+    background-color: transparent !important;
+}
+.rbc-btn-group:first-child button:nth-child(3)::after{
+    width: 30px;
+    height: 30px;
+    content: ">";
+    position: absolute;
+    font-size: 30px;
+    top:-3px;
+    right: 20px;
+}
+.rbc-btn-group:first-child button:nth-child(2),
+.rbc-btn-group:first-child button:nth-child(3){
+    width: 30px;
+    height: 30px;
+    font-size: 1px;
+}
